# GOITeens

./: .gitignore  my_firs_test.db  pyproject.toml  requirements.txt  task_1.py  Заняття 1. Що таке Python.py  Заняття 3. Умовні оператори.py  Заняття 4. Цикли.py  Заняття 5. Списки.py  Заняття 6. Методи списків.py  Заняття 7. ДЗ.py  Заняття 7. Міні-проєкт_Списки_Цикли_Умовні оператори.py  Урок 1. Що таке Python.py  Урок 2_Основи мови - змінні та вирази.py
GoITeens_UA_PYTHON_1y_10_06_04_24/: task.py
GoITeens_UA_PYTHON_1y_10_06_04_24/1/: task.py
GoITeens_UA_PYTHON_1y_10_06_04_24/10/: task.py
GoITeens_UA_PYTHON_1y_10_06_04_24/11/: task.py  Заняття - 11 - 1.py  Заняття - 11 - 2.py
GoITeens_UA_PYTHON_1y_10_06_04_24/12/: task.py
GoITeens_UA_PYTHON_1y_10_06_04_24/13/: task.py  Андрій.py  Артем.py  Влад.py  Гліб.py  Микола.py
GoITeens_UA_PYTHON_1y_10_06_04_24/14/: task.py  Андрій.py  Артем.py  Влад.py  Гліб.py  Микола.py
GoITeens_UA_PYTHON_1y_10_06_04_24/15/: Заняття - 15-1.py  Заняття - 15-2.py
GoITeens_UA_PYTHON_1y_10_06_04_24/16/: task.py  Адрей.py  Артем.py  Влад.py  Гліб.py  Микола.py
GoITeens_UA_PYTHON_1y_10_06_04_24/17/: task.py  Заняття - 17-1.py  Заняття - 17-2.py
GoITeens_UA_PYTHON_1y_10_06_04_24/18/: main.py  my_data.py  my_geometry.py  my_math.py  my_module.py  my_statistics.py  pyproject.toml  task.py
GoITeens_UA_PYTHON_1y_10_06_04_24/19/: combined.txt  data_new.txt  file.txt  input.txt  output.txt  task.py  text.txt  text1.txt
GoITeens_UA_PYTHON_1y_10_06_04_24/2/: task.py
GoITeens_UA_PYTHON_1y_10_06_04_24/20/: main.py
GoITeens_UA_PYTHON_1y_10_06_04_24/24/: task.py
GoITeens_UA_PYTHON_1y_10_06_04_24/25/: task.py
GoITeens_UA_PYTHON_1y_10_06_04_24/26/: task.py
GoITeens_UA_PYTHON_1y_10_06_04_24/3/: task.py
GoITeens_UA_PYTHON_1y_3_22_02_24/18/: pyproject.toml  task.py
GoITeens_UA_PYTHON_1y_3_22_02_24/44/docker-3/: Dockerfile  main.py  pyproject.toml  requirements.txt
GoITeens_UA_PYTHON_1y_3_22_02_24/44/docker-3/data/: base.py
GoITeens_UA_PYTHON_1y_4_24_02_24/27-2/: main.py  pyproject.toml
GoITeens_UA_PYTHON_1y_4_24_02_24/27-2/pizza/: main.py
GoITeens_UA_PYTHON_1y_4_24_02_24/27-2/pizza/static/: index.css  Контакти.css
GoITeens_UA_PYTHON_1y_4_24_02_24/27-2/pizza/templates/: contacts.html  index.html  menu.html
GoITeens_UA_PYTHON_1y_4_24_02_24/27-2/static/: index.css  style.css
GoITeens_UA_PYTHON_1y_4_24_02_24/27-2/templates/: index.html  index1.html  index2.html  page_2.html
GoITeens_UA_PYTHON_1y_4_24_02_24/51_fastapi/test_fastapi-4/: main.py  pyproject.toml
Матеріали/: Заняття 10. Зрізи та множити.py  Заняття 11. Міні-проєкт_Зрізи та множини.py  Заняття 12. Словники.py  Заняття 13. Словники і цикли.py  Заняття 14. Колекції.py  Заняття 15. Міні-проєкт_Словники, Колекції, Цикли.py  Заняття 17. Міні-проєкт_Функції.py  Заняття 18. Імпорт пакетів і модулів.py  Заняття 25. Додатковий урок. ООП. Частина 2.py  Заняття 3. Умовні оператори.py  Заняття 8. Робота з рядками.py  Заняття 9. Методи рядків.py
Матеріали/22_Командний проєкт 2/: pyproject.toml
Матеріали/22_Командний проєкт 2/products_system/: main.py  main_old.py
Матеріали/22_Командний проєкт 2/products_system/files/: employees.json  most_using_command.json  reviews.json
Матеріали/22_Командний проєкт 2/products_system/form/: reviews.py
Матеріали/22_Командний проєкт 2/products_system/functions/: products.py  reviews.py
Матеріали/22_Командний проєкт 2/products_system/log/: log.py
Матеріали/22_Командний проєкт 2/products_system/routers/: start.py
Матеріали/31_Flask_SQLAlchemy/: employees.db  main.py  pyproject.toml
Матеріали/31_Flask_SQLAlchemy/app/: __init__.py
Матеріали/31_Flask_SQLAlchemy/app/models/: __init__.py  associates.py  base.py  cabinet.py  employee.py  position.py
Матеріали/31_Flask_SQLAlchemy/app/routes/: __init__.py  cabinet.py  employee.py  position.py  root.py
Матеріали/31_Flask_SQLAlchemy/app/templates/: _base.html  _navigation.html  index.html
Матеріали/31_Flask_SQLAlchemy/app/templates/cabinet/: info.html  management.html
Матеріали/31_Flask_SQLAlchemy/app/templates/employee/: info.html  management.html
Матеріали/31_Flask_SQLAlchemy/app/templates/position/: info.html  management.html
Матеріали/32_Flask_Парсинг даних. JSON/1/: pyproject.toml
Матеріали/32_Flask_Парсинг даних. JSON/2_парсинг/: main.py  pizzas.db  pyproject.toml
Матеріали/32_Flask_Парсинг даних. JSON/2_парсинг/data/: wheather.py
Матеріали/32_Flask_Парсинг даних. JSON/2_парсинг/models/: assoiates.py  base.py  pizza.py
Матеріали/32_Flask_Парсинг даних. JSON/2_парсинг/routes/: pizza.py
Матеріали/32_Flask_Парсинг даних. JSON/2_парсинг/templates/: _base.html  _navigation.html  _wheather.html  menu.html
Матеріали/33_Flask_blog/: blog.db  pyproject.toml
Матеріали/33_Flask_blog/app/: __init__.py
Матеріали/33_Flask_blog/app/data/: password.py
Матеріали/33_Flask_blog/app/db/: __init__.py  base.py
Матеріали/33_Flask_blog/app/db/models/: position.py  post.py  temp_pass.py  user.py
Матеріали/33_Flask_blog/app/routes/: __init__.py  blog.py  position.py
Матеріали/33_Flask_blog/app/static/css/: style.css
Матеріали/33_Flask_blog/app/templates/: 123.html  _base.html  add_position.html  add_user.html  index.html
Матеріали/38_Flask_створеня RestAPI точок входу/: main.py  pyproject.toml  quote.db
Матеріали/38_Flask_створеня RestAPI точок входу/FRONTEND/: index.html
Матеріали/38_Flask_створеня RestAPI точок входу/app/db/: base.py  db.py  models.py
Матеріали/38_Flask_створеня RestAPI точок входу/static/: swagger.json
Матеріали/38_Flask_створеня RestAPI точок входу/test_app/: db.py  db_actions.py  main.py  pyproject.toml
Матеріали/39_ Форми Flask.Розширення Flask-WTF. Як отримати дані від користувача/test_form_wtf/: main.py  pyproject.toml  users.json
Матеріали/39_ Форми Flask.Розширення Flask-WTF. Як отримати дані від користувача/test_form_wtf/templates/: ice.html  luggage.html  registration.html  subscribe.html
Матеріали/47_Parse_rozetka/requests_html_rozetka/: main.py  prods.json  pyproject.toml
Матеріали/9-10_Хрестики нолики/: game.py  pyproject.toml
(+1105 files in other folders)
