[tool.poetry]
name = "goiteens"
version = "0.1.0"
description = ""
authors = ["Oleksandr Kondratiuk <48170652+alex-kondr@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
