[tool.poetry]
name = "t-bot-1"
version = "0.1.0"
description = ""
authors = ["Oleksandr Kondratiuk <48170652+alex-kondr@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
aiogram = "^3.10.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
