[tool.poetry]
name = "32-flask-парсинг даних- json"
version = "0.1.0"
description = ""
authors = ["Oleksandr Kondratiuk <alex_kondr@outlook.com>"]
readme = "README.md"
packages = [{include = "32_flask_парсинг даних"}]

[tool.poetry.dependencies]
python = "^3.10"
flask-wtf = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
